Change to /like/{videoID} [put]
