# docs/swagger.json
@@ -7,8 +7,8 @@
         "version": "1.0"
     },
     "paths": {
-        "/like/video": {
-            "post": {
+        "/like/{videoID}": {
+            "put": {
                 "security": [
                     {
                         "AccessToken": []
@@ -27,13 +27,11 @@
                 "summary": "Add like to video",
                 "parameters": [
                     {
-                        "description": "Like Video Request",
-                        "name": "likeVideoRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.LikeVideoRequest"
-                        }
+                        "type": "string",
+                        "description": "Video ID",
+                        "name": "videoID",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -461,17 +459,6 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.LikeVideoRequest": {
-            "type": "object",
-            "required": [
-                "video_id"
-            ],
-            "properties": {
-                "video_id": {
                     "type": "string"
                 }
             }
